# cmdfinder

./: .gitignore  README.md  pyproject.toml
src/: cli.py  core.py
src/cmdfinder/: add_command.py  alias_edit.py  cli.py  colors.py  core.py  data_io.py  paths.py  remote_catalog.py
src/cmdfinder/data/: commands.json
src/cmdfinder/tui/: app.py
src/cmdfinder/tui/screens/: confirm.py  form.py  new_program.py  select_program.py
src/tui/: app.py
src/tui/screens/: confirm.py  form.py  new_program.py  select_program.py
