[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdfinder"
version = "0.1.0"
description = "Buscador de comandos por programa + accion, con matching difuso"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50",
]

[project.scripts]
cf = "cmdfinder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cmdfinder = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
